Use a ProcessBuilder, force GC when finishing live logcat